--- a/html/_/index.html
+++ b/html/_/index.html
@@ -119,7 +119,7 @@ crossorigin=""/>
 
 <div class="row h-15 align-items-end">
   <div class="container-fluid text-center">
-  <div class="col-12 p-0 mt-4 mb-1">
+  <div class="col-12 p-0 mt-5 mb-1">
         <a class="col-12  mt-2 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/Newsletter.html">
           <span lang="fr">Newsletter</span><span lang="en">Newsletter</span>
         </a>
@@ -139,7 +139,7 @@ crossorigin=""/>
       </div>
     </div>
    <div class="copyright row mt-2 d-none d-sm-none d-md-block">
-        <sup>©</sup> Copyright 2019 |  ScenTree  | All Rights Reserved |
+        <sup>©</sup> Copyright 2019-2020 |  ScenTree SAS  | All Rights Reserved |
    </div>
   </div>
 </div>
