--- a/html/_/support.html
+++ b/html/_/support.html
@@ -111,6 +111,9 @@ crossorigin=""/>
         <a class="col-12  mt-1 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/Newsletter.html">
           <span lang="fr">Newsletter</span><span lang="en">Newsletter</span>
         </a>
+        <a class="col-12  m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/Newsletter.html">
+          <span><a class="survey_link  text-in-color-brown save_map_status_on_leaving" role="button" lang="fr" href="https://docs.google.com/forms/d/e/1FAIpQLSc0Lsx5k5lzFJ3p7YJn04Pn0KbyXCDnl52cTit8hxhf4YYQJA/viewform" target="_BLANK"><b>Enquête de satisfaction  </b></a><a class="survey_link  text-in-color-brown save_map_status_on_leaving" role="button" lang="en" href="https://docs.google.com/forms/d/e/1FAIpQLSeQljdzyC8Lkzqs2k97ZJDeC59lIV_ws2axSNfLa_0-yOezcQ/viewform" target="_BLANK"><b>Satisfaction survey  </b></a><i class="fas fa-info-circle notifi4"></i></span>
+        </a>
         <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/Sources.html">
           <span lang="fr">Sources</span><span lang="en">Sources</span>
         </a>
