--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -190,7 +190,7 @@ crossorigin=""/>
       <img class="card-img-top" src="../img/sponsor.jpg" title="fréquence d'envoi de la newsletter" alt="Card image cap">
       <div class="card-body text-secondary">
         <p class="card-text ">
-          <span lang="fr">Je suis informé des arrivés et des actualités de nos sponsors</span>
+          <span lang="fr">Je suis informé des arrivés, des nouveautés et des actualités de nos sponsors</span>
           <span lang="en">I am informed of the arrivals and news of our sponsors.</span>
         </p>
       </div>
