--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -178,7 +178,7 @@ crossorigin=""/>
 
   <div class="card-deck col-12 text-center">
     <div class="card">
-      <img class="card-img-top" src="../img/calender.png" title="fréquence d'envoi de la newsletter" alt="fréquence d'envoi de la newsletter">
+      <img class="card-img-top text-center" src="../img/calender.png" title="fréquence d'envoi de la newsletter" alt="fréquence d'envoi de la newsletter">
       <div class="card-body" >
         <p class="card-text">
           <span lang="fr">Toutes les 2 semaines, je reçois les nouveautés des dernières mises à jour</span>
@@ -187,7 +187,7 @@ crossorigin=""/>
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="../img/sponsor.jpg" title="Nos sponsors et leurs actualités" alt="Nos sponsors et leurs actualités">
+      <img class="card-img-top text-center" src="../img/sponsor.jpg" title="Nos sponsors et leurs actualités" alt="Nos sponsors et leurs actualités">
       <div class="card-body">
         <p class="card-text ">
           <span lang="fr">Je suis informé des arrivés, des nouveautés et des actualités de nos sponsors</span>
@@ -196,7 +196,7 @@ crossorigin=""/>
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="../img/MP.jpg" title="Les ingrédients parfums" alt="Les ingrédients parfums">
+      <img class="card-img-top text-center" src="../img/MP.jpg" title="Les ingrédients parfums" alt="Les ingrédients parfums">
       <div class="card-body">
         <p class="card-text">
           <span lang="fr">Je reçois des détails sur les nouveaux ingrédients ajoutés chaque dimanche</span>
