--- a/html/_/Newsletter.html
+++ b/html/_/Newsletter.html
@@ -206,68 +206,68 @@ crossorigin=""/>
     </div>
   </div>
   
-  <div class="formulaire mt-4" style="background-color: yellow;">
-  <form>
-  <!--Nom-->  
-    <div class="form-group row">
-      <label for="inputname" class="col-2 col-form-label">
-        <span lang="fr">Nom :</span>
-        <span lang="en">Name :</span>
-      </label>
-      <div class="col-10">
-        <input type="text" class="form-control" id="inputname" lang="fr" placeholder="Saisir votre nom ici..">
-        <input type="text" class="form-control" id="inputname" lang="en" placeholder="Write your name here..">
+  <div class="formulaire mt-4 col-8 " style="background-color: yellow;">
+    <form>
+    <!--Nom-->  
+      <div class="form-group row">
+        <label for="inputname" class="col-2 col-form-label">
+          <span lang="fr">Nom :</span>
+          <span lang="en">Name :</span>
+        </label>
+        <div class="col-10">
+          <input type="text" class="form-control" id="inputname" lang="fr" placeholder="Saisir votre nom ici..">
+          <input type="text" class="form-control" id="inputname" lang="en" placeholder="Write your name here..">
+        </div>
       </div>
-    </div>
-  <!-- Prénom-->  
-    <div class="form-group row">
-      <label for="inputfirstname" class="col-2 col-form-label">
-        <span lang="fr">Prénom :</span>
-        <span lang="en">First name :</span>
-      </label>
-      <div class="col-10">
-        <input type="text" class="form-control" id="inputfirstname" lang="fr" placeholder="Saisir votre prénom ici..">
-        <input type="text" class="form-control" id="inputfirstname" lang="en" placeholder="Write your first name here..">
-      </div>  
-    </div>
-  <!--emails -->
-    <div class="form-group row">
-      <label for="inputmail" class="col-2 col-form-label">
-        <span lang="fr">Adresse mail :</span>
-        <span lang="en">Email adress :</span>
-      </label>
-      <div class="col-10">
-        <input type="email" class="form-control" id="inputmail" lang="fr" placeholder="adressemail@example.com">
-        <input type="email" class="form-control" id="inputmail" lang="en" placeholder="emailadress@example.com"> 
-      </div>  
-    </div>
-  <!-- date de naissance-->
-    <div class="form-group row">
-      <label for="inputbirthday" class="col-3 col-form-label">
-        <span lang="fr">Date de naissance :</span>
-        <span lang="en">Birth date :</span>
-      </label>
-      <div class="col-9">
-        <input type="date" class="form-control" id="inputbirthdate" lang="fr">
-        <input type="date" class="form-control" id="inputbirthdate" lang="en">
-      </div>  
-    </div>
+    <!-- Prénom-->  
+      <div class="form-group row">
+        <label for="inputfirstname" class="col-2 col-form-label">
+          <span lang="fr">Prénom :</span>
+          <span lang="en">First name :</span>
+        </label>
+        <div class="col-10">
+          <input type="text" class="form-control" id="inputfirstname" lang="fr" placeholder="Saisir votre prénom ici..">
+          <input type="text" class="form-control" id="inputfirstname" lang="en" placeholder="Write your first name here..">
+        </div>  
+      </div>
+    <!--emails -->
+      <div class="form-group row">
+        <label for="inputmail" class="col-2 col-form-label">
+          <span lang="fr">Adresse mail :</span>
+          <span lang="en">Email adress :</span>
+        </label>
+        <div class="col-10">
+          <input type="email" class="form-control" id="inputmail" lang="fr" placeholder="adressemail@example.com">
+          <input type="email" class="form-control" id="inputmail" lang="en" placeholder="emailadress@example.com"> 
+        </div>  
+      </div>
+    <!-- date de naissance-->
+      <div class="form-group row">
+        <label for="inputbirthday" class="col-3 col-form-label">
+          <span lang="fr">Date de naissance :</span>
+          <span lang="en">Birth date :</span>
+        </label>
+        <div class="col-9">
+          <input type="date" class="form-control" id="inputbirthdate" lang="fr">
+          <input type="date" class="form-control" id="inputbirthdate" lang="en">
+        </div>  
+      </div>
+    </form>
+  </div>
 
-  <!-- bouton d'envoi du formulaire-->
+  <div class="envoiRGPD">
+    <!-- bouton d'envoi du formulaire-->
     <button type="submit" class="btn btn-secondary text-center"><span lang="fr">M'inscrire à la newsletter</span><span lang="en">Suscribe to newsletter</span></button>
-  </form>  
-</div>
-
-<!--RGPD-->
-<p class="mt-4 mb-0">
-  <b><span lang="fr">Protection des données personnelles :</span>
-     <span lang="en">Protection of personal data :</span></b>
-</p>
-<p>
-  <span lang="fr">En application du Règlement UE 2016/679 du 27 avril 2016 relatif à la protection des données personnelles, vous disposez du droit de vous opposer à tout moment à la réception de nos newsletters en cliquant sur le lien hypertexte présent dans celles-ci.</span>
-  <span lang="en">In application of EU Regulation 2016/679 of 27 April 2016 regarding the protection of personal data, you have the right to contest at any time the receipt of our newsletters by clicking on the hypertext link in them.</span>
-</p>
-
+    <!--RGPD-->
+    <p class="mt-4 mb-0">
+      <b><span lang="fr">Protection des données personnelles :</span>
+         <span lang="en">Protection of personal data :</span></b>
+    </p>
+    <p>
+      <span lang="fr">En application du Règlement UE 2016/679 du 27 avril 2016 relatif à la protection des données personnelles, vous disposez du droit de vous opposer à tout moment à la réception de nos newsletters en cliquant sur le lien hypertexte présent dans celles-ci.</span>
+      <span lang="en">In application of EU Regulation 2016/679 of 27 April 2016 regarding the protection of personal data, you have the right to contest at any time the receipt of our newsletters by clicking on the hypertext link in them.</span>
+    </p>
+  </div>
 </div><!--FIN BLOCK SCROLLABLE-->
 
 </div>
